--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
-title: John Doe # your name (or website title) here
+title: Esha Dasgupta # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  <a href="">About Me</a> 
   <br><br>
-  Second description 
+ <a href="">Resume</a>
+  <br><br>
+  <a href="">Projects</a>
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
