--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Esha Dasgupta # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/image_2020-11-03_130400.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <a href="https://eshadasgupta.github.io/portfolio/index">About Me</a>  
   <br><br>
